// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test adding custom className to Container control 1`] = `
<section
  className="ui-container container normal test-classname"
  id="testid"
>
  <p>
    Test Container
  </p>
</section>
`;

exports[`Test creation of a Container control 1`] = `
<section
  className="ui-container container normal"
  id=""
>
  <p>
    Test Container
  </p>
</section>
`;

exports[`Test creation of a Container control with an id value 1`] = `
<section
  className="ui-container container normal"
  id="testid"
>
  <p>
    Test Container
  </p>
</section>
`;

exports[`Test retrieval of Container props object 1`] = `
Object {
  "backgroundColor": "inherit",
  "borderColor": "inherit",
  "borderWidth": "none",
  "children": null,
  "className": "",
  "color": "inherit",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "visible": true,
  "width": "",
}
`;
